--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
@@ -31,9 +32,9 @@ jobs:
 
 
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20.x'
 
       - name: Install npm dependencies
         run: |
