--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,21 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable_current_amd64.deb
+          sudo apt-get install -y google-chrome-stable
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
           pip install pytest-html-reporter
-
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-
-      - name: Install npm dependencies
-        run: |
-          npm install
 
       - name: Run tests and generate HTML report
         run: |
