requirements add python -m pytest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
+          python -m pytest
           pytest -rA
 
       - name: Upload HTML report
