--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
+          pip3 install pytest
 
       - name: Install GPG Key
         run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
@@ -36,7 +37,6 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
-          python -m pytest
           pytest -rA
 
       - name: Upload HTML report
