--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-          pip3 install pytest
+          pip install pytest
 
       - name: Install GPG Key
         run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
@@ -37,7 +37,7 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
-          pytest -rA
+          pytest
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
