--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo apt-get -y update
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
@@ -36,8 +37,7 @@ jobs:
         run: sudo apt-get -y update; sudo apt-get -y install google-chrome-stable
 
       - name: Run tests and generate HTML report
-        run: |
-          pytest
+        run: pytest -rA
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
