--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,6 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-          pip install pytest
 
       - name: Install GPG Key
         run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
@@ -37,7 +36,9 @@ jobs:
         run: sudo apt-get -y update; sudo apt-get -y install google-chrome-stable
 
       - name: Run tests and generate HTML report
-        run: pytest -rA
+        run: |
+          python -m pytest
+          pytest -rA
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
