--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
+          pip install pytest
           python -m pytest
           pytest -rA
 
