installed selenium and pytest in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
+          pip install pytest selenium
           pytest -rA
 
       - name: Upload HTML report
