--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get update
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install -r selenium pytest webdriver-manager
           pip install pytest-html-reporter
 
       - name: Install GPG Key
