--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,6 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-          pip install -r selenium pytest webdriver-manager
           pip install pytest-html-reporter
 
       - name: Install GPG Key
@@ -39,6 +38,7 @@ jobs:
 
       - name: Run tests and generate HTML report
         run: |
+          source venv/bin/activate
           pytest -rA
 
       - name: Upload HTML report
