new install pkg_resources in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Install Google Chrome Stable
         run: |
           sudo apt-get -y install google-chrome-stable
+          sudo apt install --reinstall python3-pkg-resources python3-setuptools
 
       - name: Run tests and generate HTML report
         run: |
