new install pkg_resources in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          python -m venv venv
           sudo apt-get update
           python -m venv venv
-          source venv/bin/activate
-          sudo apt-get install --reinstall python3-pkg-resources python3-setuptools
+          source venv/bin/activate        
           pip install -r requirements.txt
           pip install pytest-html-reporter
 
