--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo apt-get install --reinstall python3-pkg-resources python3-setuptools
           python -m venv venv
           sudo apt-get update
           python -m venv venv
