Update github workflow + test files

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,10 @@ mysqlToPostgres.js
 # project
 output.json
 archive/
-test/admin/__pycache__/
+test/__pycache__
+test/admin/__pycache__
+packages/evershop/src/modules/catalog/bootstrap.js
+package-lock.json
+package.json
+
+
