--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,33 @@ jobs:
         run: |
           sudo apt-get -y install google-chrome-stable
           
+      - name: Install containerd.io and Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y containerd.io docker-ce docker-ce-cli
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+
+      - name: Install npm dependencies
+        run: |
+          npm install
+
+      - name: Start Docker Compose and wait
+        run: |
+          docker-compose up -d
+          docker-compose ps
+
+      - name: Install Evershop & Create admin user
+        run: |
+          docker exec evershop-automation-tests_app_1 npm run user:create -- --email "test@test.fr" --password "123456test123" --name "anouvene"
       - name: Run tests and generate HTML report
         run: |
           source venv/bin/activate
