--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install Dependencies
+      - name: Install python Dependencies
         run: |
           sudo apt-get update
           python -m venv venv
@@ -30,7 +30,7 @@ jobs:
           pip install -r requirements.txt
           pip install pytest-html-reporter
 
-      - name: Install GPG Key
+      - name: Install GPG Key, Chrome and ChromDriver
         run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
       - name: Add source.list
         run: echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | sudo tee /etc/apt/sources.list.d/google-chrome.list
@@ -53,8 +53,10 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install npm dependencies
+      - name: Install Evershop and npm dependencies
         run: |
+          npx create-evershop-app myapp
+          cd myapp
           npm install
 
       - name: Start Docker Compose and wait
@@ -62,16 +64,26 @@ jobs:
           docker-compose up -d
           docker-compose ps
 
-      - name: Install Evershop & Create admin user
+      - name: Create admin user
         run: |
           docker exec evershop-automation-tests_app_1 npm run user:create -- --email "test@test.fr" --password "123456test123" --name "anouvene"
+
       - name: Run tests and generate HTML report
         run: |
           source venv/bin/activate
           pytest -rA
 
+      - name: Run tests and generate HTML report
+        run: |
+          source venv/bin/activate
+          pytest
+
       - name: Upload HTML report
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: test-report
           path: pytest_html_report.html
+
+      - name: Shutdown Docker Compose
+        run: |
+          docker-compose down
