--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           npx create-evershop-app myapp
           cd myapp
-          npm install @evershop/evershop@latest
+          npm install
 
       - name: Start Docker Compose and wait
         run: |
