--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,9 +49,14 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+        node_versions:
+          strategy:
+            matrix:
+              version: [ 10, 12, 14, 18, 19, 20 ]
+          steps:
+            - uses: actions/setup-node@v4
+              with:
+              node-version: ${{ matrix.version }}
 
       - name: Install Evershop and npm dependencies
         run: |
